--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>de.changepoint</groupId>
+	<groupId>com.example</groupId>
 	<artifactId>jruby-test</artifactId>
 	<version>0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
-		<project.mainclass>de.changepoint.jruby.runner.JRubyRunner</project.mainclass>
+		<project.mainclass>com.example.jruby.runner.JRubyRunner</project.mainclass>
 	</properties>
 
 	<repositories>
