--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,9 @@
 
 	<repositories>
 		<repository>
-			<id>rubygems-release</id>
-			<url>http://rubygems-proxy.torquebox.org/releases</url>
+			<id>local_repo</id>
+			<url>file:///home/zacsek/work/test_jruby/repo/repository</url>
+			<!--<url>http://rubygems-proxy.torquebox.org/releases/</url>-->
 		</repository>
 	</repositories>
 
